newclay/test/Compiler/Propagation/Fail/ReturnCountMismatch1/main.clay
main() {
    if (true)
        return 1;
    else
        return 1, '2';
}
